appId: com.supramarkrndemo
env:
  BUNDLE_URL: 'http://localhost:8090/.expo/.virtual-metro-entry.bundle?platform=android&dev=true&minify=false'
---
- launchApp:
    appId: com.supramarkrndemo
    arguments:
      supramarkBundleURL: ${BUNDLE_URL}
- assertVisible: Selection Demo
- tapOn: Select CJK half
- waitForAnimationToEnd
- assertVisible: cjk half
